--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/AppliedMathematicsANU/plexus-objective.git"
+  },
+  "devDependencies": {
+    "comfychair": "~0.0.2",
+    "jasmine-node": "~1.14.0"
   }
 }
